[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/camera/GameCamera.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/visuals/tilesets/snow.png" type="Texture" id=3]
[ext_resource path="res://objects/camera/cameraEffects/Blackout.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/ui/NormalUIBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/ui/BossHPBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/ui/LivesCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/ui/PUSelectionOverlay.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 447.9, 287.9 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 640, 320, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 500.0
initial_velocity_random = 1.0
angular_velocity = -3.15461e+032
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 20.0
tangential_accel_random = 1.0
angle_random = 1.0
scale = 4.0

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, 16 ), Vector2( 0, -12 ), Vector2( 0, 12 ), Vector2( 0, -8 ), Vector2( 0, 8 ), Vector2( 0, -6 ), Vector2( 0, 6 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, -3 ), Vector2( 0, 3 ), Vector2( 0, -2 ), Vector2( 0, 2 ), Vector2( 0, -2 ), Vector2( 0, 2 ), Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( -480, -320 )
b = Vector2( -480, 320 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 480, -320 )
b = Vector2( 480, 320 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -480, -320 )
b = Vector2( 480, -320 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -480, 320 )
b = Vector2( 480, 320 )

[node name="GameCamera" type="KinematicBody2D" groups=[
"game_camera",
]]
position = Vector2( -128, 80 )
collision_layer = 0
collision_mask = 1024
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Center" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Effects" type="Node2D" parent="."]
editor/display_folded = true

[node name="Snowing" type="Particles2D" parent="Effects"]
position = Vector2( -160, -160 )
emitting = false
amount = 50
lifetime = 3.0
speed_scale = 0.8
randomness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="Blackout" parent="Effects" instance=ExtResource( 4 )]

[node name="Earthquake" type="AnimationPlayer" parent="Effects"]
anims/default = SubResource( 3 )
anims/strong = SubResource( 4 )

[node name="UI" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="LifeBar" parent="UI" instance=ExtResource( 5 )]
position = Vector2( -432, -208 )
Type = "Life"

[node name="WeaponBar" parent="UI" instance=ExtResource( 5 )]
position = Vector2( -384, -208 )

[node name="BossHPBar" parent="UI" instance=ExtResource( 6 )]
position = Vector2( 0, -272 )

[node name="LivesCounter" parent="UI" instance=ExtResource( 7 )]
position = Vector2( 416, -256 )

[node name="PUSelectionOverlay" parent="UI" instance=ExtResource( 8 )]
margin_left = -480.0
margin_top = -320.0

[node name="Borders" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 8 )
